# barebones_semantic_search

./: .gitignore  README.md  main.py  pyproject.toml
search_engine/: __init__.py  chunker.py  database.py  embedder.py  search.py
