[project]
name = "lightweight-semantic-search"
version = "0.1.0"
description = "Minimal semantic code search"
requires-python = ">=3.11"

dependencies = [
    "lancedb>=0.21.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pyarrow>=18.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
